--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -97,7 +97,7 @@ nav li a:hover {
   display: none;
 }
 
-@media only screen and (min-width: 300px) and (max-width: 767px) {
+@media only screen and (min-width: 299px) and (max-width: 767px) {
   #header {
     display: grid;
     text-align: center;
@@ -106,7 +106,7 @@ nav li a:hover {
   }
 
   #header-logo h1 {
-    font-size: 1.7rem;
+    font-size: 1.3rem;
   }
 
   .logo-hideMenu {
@@ -174,17 +174,29 @@ nav li a:hover {
 
 @media only screen and (max-width: 343px) {
   #header-logo h1 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1114px) {
+/* @media only screen and (min-width: 768px) and (max-width: 1114px) */
+@media only screen and (min-width: 839px) and (max-width: 1114px) {
   #header-logo h1 {
-    font-size: 2rem;
+    font-size: 1.9rem;
   }
 }
 
-@media only screen and (min-width: 799px) and (max-width: 835px) {
+@media only screen and (min-width: 767px) and (max-width: 808px) {
+  #header-logo h1 {
+    font-size: 1.6rem;
+  }
+}
+
+/* @media only screen and (min-width: 799px) and (max-width: 835px) */
+@media only screen and (min-width: 809px) and (max-width: 838px) {
+  #header-logo h1 {
+    font-size: 1.8rem;
+  }
+
   .struktur-content {
     min-height: 94vh;
   }
