--- a/src/pages/StrukturOrganisasi/strukturOrganisasi.css
+++ b/src/pages/StrukturOrganisasi/strukturOrganisasi.css
@@ -20,6 +20,7 @@
 .struktur-pp-rt img {
   height: 145px;
   width: 145px;
+  object-fit: cover;
   border-radius: 50%;
   /* box shadow*/
   -webkit-box-shadow: 6px 4px 5px 0px rgba(0, 0, 0, 0.36);
@@ -40,6 +41,7 @@
   border-radius: 50%;
   height: 145px;
   width: 145px;
+  object-fit: cover;
   /* box shadow */
   -webkit-box-shadow: 6px 4px 5px 0px rgba(0, 0, 0, 0.36);
   -moz-box-shadow: 6px 4px 5px 0px rgba(0, 0, 0, 0.36);
